--- a/style.css
+++ b/style.css
@@ -52,4 +52,16 @@
   .btn:hover {
     opacity: 1;
   }
+  form {
+    width: 50%;
+  padding: 20px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+    
+  
   
