--- a/style.css
+++ b/style.css
@@ -62,6 +62,27 @@
     margin-right: auto;
     text-align: left;
 }
-    
+#exampleInputEmail1 {
+  width: 600px;
+  margin : auto;
+  display: inline-block;
+  margin-left: 35px;
+}
+#exampleInputPassword1 {
+  width: 600px;
+  margin : auto;
+  display: inline-block;
+  margin-left: 35px;
+  margin-bottom: 35px;
+}
+#emailHelp {
+  display: inline-block;
+  margin-left: 35px;
+}
+.login {
+  margin-left: 550px;
+  margin-top: 30px;
+  width: 80px;
+}
   
   
