updated html & css

--- a/style.css
+++ b/style.css
@@ -84,5 +84,16 @@
   margin-top: 30px;
   width: 80px;
 }
+#rememberme {
+  margin-left: 15px;
+}
+#exampleCheck1 {
+  margin-left: 10px;
+}
+#reginsternow {
+  margin-left: 10px;
+  font-size: 40px;
+  text-decoration: none;
+}
   
   
