--- a/style.css
+++ b/style.css
@@ -82,10 +82,9 @@
 }
 #loginButton {
   width: 600px;
-  margin : auto;
-  display: inline-block;
-  margin-left:10px;
   margin-top: 15px;
+  float: center;
+  margin-left: 10px;
 }
 #rememberme {
   margin-left: 15px;
